Update v1.1.0